# recipe-recommendation-backend

./: .env-example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  locust.conf  prod.env  pyproject.toml  requirements.txt
app/: main.py
app/api/errors/: aiohttp_error.py
app/api/routes/: api.py  recipes.py
app/core/settings/: app.py  development.py  test.py
app/models/schemas/: recipes.py
app/services/: foodstuff_recognition.py
app/services/ai_model/: app.py
app/services/recipes_parsing/: edamam.py  types.py
tests/loadtest/: locust.py
